[project]
name = "doct-redaction"
version = "0.1.0"
requires-python = ">=3.10,<3.12"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.20",
  "pymupdf>=1.25.0",
  "pydantic",
  "python-dotenv",
  "APScheduler>=3.10.0",

  # ML / OCR
  "transformers>=4.30.0",
  "torch==2.1.2+cpu; platform_system=='Linux'",
  "numpy>=1.24.0",
  "pillow>=10.0.0"
]
